[package]
name = "fluid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
comrak = "0.18.0"
lazy_static = "1.4.0"
regex = "1.7.0"

warp = "0.3.5"
futures-util = "0.3.28"
tokio = { version = "1.32.0", features = [] }
pretty_env_logger = "0.5.0"
tokio-stream = "0.1.14"
clap = { version = "4.4.2", features = ["derive"] }

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Environment",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Networking_WebSocket",
    "Win32_Networking_HttpServer",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Console",
] }
