[package]
name = "fluid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
comrak = "0.18.0"
lazy_static = "1.4.0"
regex = "1.7.0"
clap = { version = "4.4.2", features = ["derive"] }

tokio-stream = { version = "0.1.14", optional = true }
warp = { version = "0.3.5", optional = true }
futures-util = { version = "0.3.28", optional = true }
tokio = { version = "1.32.0", features = [], optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Environment",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Networking_WebSocket",
    "Win32_Networking_HttpServer",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Console",
] }

[features]
live = [
    "dep:tokio-stream",
    "dep:warp",
    "dep:futures-util",
    "dep:tokio",
    "dep:pretty_env_logger",
]
